# mycontrol

./: Cargo.toml  massif.out.22926  massif.out.5509  massif.out.6499  rules.txt
crates/control/: Cargo.toml
crates/control/src/: chat.rs  config.rs  main.rs  state.rs
crates/ui/: Cargo.toml
crates/ui/src/: actions.rs  animation.rs  assets.rs  colors.rs  drawer.rs  event.rs  focus.rs  icon.rs  indicator.rs  kbd.rs  lib.rs  modal.rs  notification.rs  root.rs  styled.rs  theme.rs  title_bar.rs  tooltip.rs  window_border.rs
crates/ui/src/button/: button.rs  button_group.rs  mod.rs
crates/ui/src/input/: clear_button.rs  mode.rs  number_input.rs  state.rs  text_input.rs  text_wrapper.rs
crates/ui/src/scroll/: scrollable.rs  scrollable_mask.rs  scrollbar.rs
crates/ui/src/sidebar/: example.rs  footer.rs  group.rs  header.rs  menu.rs  mod.rs  new_task_sidebar.rs
src/: main.rs
~/.config/control/: config.toml
