[package]
name = "control"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git" }
unicode-segmentation = "1.12.0"
ui = { path = "../ui" }
serde_json = "1.0.140"
anyhow = "1.0.98"
rfd = { version = "0.15.3", default-features = false, features = ["gtk3"] }
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
