[package]
name = "control"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
directories = "5.0.1"
gpui = { git = "https://github.com/zed-industries/zed.git" }
rfd = { version = "0.15.3", default-features = false, features = ["gtk3"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8.14"
ui = { path = "../ui" }
[profile.release]
# codegen-units = 1
# lto = true
# opt-level = 3
